Simplified gradle project import